--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-image-picker": "^5.3.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-pager-view": "^6.1.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
